--- a/app/src/main/res/layout-night/tag_edit_dialog.xml
+++ b/app/src/main/res/layout-night/tag_edit_dialog.xml
@@ -25,7 +25,7 @@
         android:layout_marginBottom="16dp"
         android:text="キャンセル"
         android:backgroundTint="#00000000"
-        android:textColor="@color/black"
+        android:textColor="#858585"
         style="@style/Widget.AppCompat.Button.Borderless"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/sakujyo"
@@ -50,7 +50,7 @@
         android:layout_marginBottom="16dp"
         android:text="編集確定"
         android:backgroundTint="#00000000"
-        android:textColor="@color/black"
+        android:textColor="#858585"
         style="@style/Widget.AppCompat.Button.Borderless"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
