--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -115,7 +115,9 @@
         android:id="@+id/tagAddButton"
         android:layout_width="90sp"
         android:layout_height="45sp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
+        android:layout_marginEnd="5dp"
         android:text="タグを追加"
         android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="parent"
