--- a/app/src/main/res/layout-night/activity_main.xml
+++ b/app/src/main/res/layout-night/activity_main.xml
@@ -24,37 +24,37 @@
         android:id="@+id/sumPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="132dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/imput_buckground"
         android:ems="7"
         android:inputType="number"
         android:maxLength="9"
+        android:textAlignment="textEnd"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textAlignment="textEnd"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
         android:id="@+id/tagSpinner"
         android:layout_width="180dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="96dp"
+        android:layout_height="25dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="107dp"
         android:background="@drawable/imput_buckground"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/apartPrice"
-        android:hint= "@string/tag_hint"
+        android:hint="@string/tag_hint"
+        android:maxLength="10"
         android:textAlignment="center"
-        android:maxLength="10"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/apartPrice" />
 
     <Button
         android:id="@+id/allCul"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="80dp"
         android:text="全て追加"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/DateSelected" />
 
     <Button
@@ -62,9 +62,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="32dp"
         android:text="追加"
-        app:layout_constraintEnd_toStartOf="@+id/allCul"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/DateSelected" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -115,14 +115,11 @@
         android:id="@+id/tagAddButton"
         android:layout_width="90sp"
         android:layout_height="45sp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginEnd="10dp"
         android:text="タグを追加"
         android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.538"
-        app:layout_constraintStart_toEndOf="@+id/tagSpinner"
         app:layout_constraintTop_toBottomOf="@+id/apartPrice" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -134,6 +131,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_navigation_menu" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintGuide_begin="0dp"
+        app:layout_constraintGuide_percent="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
