--- a/app/src/main/res/layout/activity_st.xml
+++ b/app/src/main/res/layout/activity_st.xml
@@ -84,9 +84,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
         android:text="金額"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/display_guide_tag"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
         app:layout_constraintTop_toBottomOf="@+id/sum_price" />
 
     <TextView
@@ -111,4 +112,12 @@
         app:itemIconTint="#ffffff"
         app:itemTextColor="#ffffff"
         app:backgroundTint= "#0067c0" />
-　</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="0dp"
+        app:layout_constraintGuide_percent="0.5" />
+    　</androidx.constraintlayout.widget.ConstraintLayout>
